# Snake-Wasm

./: Cargo.toml  README.md
src/: canvas.rs  direction.rs  lib.rs  snake.rs
static/: index.html  script.sh
