[package]
name = "snake_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3", features = ["Window", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "KeyboardEvent", "EventTarget"] }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
